--- a/.github/workflows/maya_unittests.yml
+++ b/.github/workflows/maya_unittests.yml
@@ -4,12 +4,162 @@ name: ExampleTool CI
 on: [push, pull_request]
 
 jobs:
-  maya2019:
+  maya2013sp1:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Run Unittests
+      uses: docker://mottosso/maya:2013sp1 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2013sp2:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2013sp2 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2014sp1:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2014sp1 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2014sp2:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2014sp2 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2014sp3:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2014sp3 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2014sp4:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2014sp4 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2015sp1:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2015sp1 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2015sp2:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2015sp2 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2015sp3:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2015sp3 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2015sp4:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2015sp4 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2015sp5:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2015sp5 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2015sp6:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2015sp6 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2016sp1:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2016sp1 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2017:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2017 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2018:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Unittests
+      uses: docker://mottosso/maya:2018 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2019:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
       uses: docker://mottosso/maya:2019 # For all available Maya versions, see https://github.com/mottosso/docker-maya
       with:
         args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
@@ -19,7 +169,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Load Docker Image
+    - name: Run Unittests
       uses: docker://mottosso/maya:2020 # For all available Maya versions, see https://github.com/mottosso/docker-maya
       with:
         args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
+  maya2020sp1:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Load Docker Image
+      uses: docker://mottosso/maya:2020sp1 # For all available Maya versions, see https://github.com/mottosso/docker-maya
+      with:
+        args: /usr/autodesk/maya/bin/mayapy -m unittest discover -s ./tests -v
+
